# WanUI

./: .gitignore  DESIGN.md  EXAMPLE_MEDIA_REQUIREMENTS.md  FOLDER_CONSOLIDATION.md  IMPLEMENTATION_SUMMARY.md  SIDEBAR_LOGO_UPDATE.md  SIDEBAR_PREVIEW.md  SIDEBAR_REDESIGN.md  SIDEBAR_UPDATE.md  THEME_PREVIEW.md  app.py  dotenv  patch.py  pyproject.toml  ralph.sh  start.sh  stop.sh
.streamlit/: config.toml  custom.css
assets/: __init__.py  hpe_badge.py  wan22_badge.py
assets/examples/: metadata.json
docs/: testing-summary.md
docs/plans/: 2026-02-03-cancellable-generation-design.md  2026-02-03-editable-extended-prompts-design.md  2026-02-03-editable-extended-prompts.md  2026-02-03-i2v-example-selector-design.md  2026-02-03-i2v-example-selector-implementation.md  2026-02-03-phosphor-icons-design.md  2026-02-03-streamlit-port-config-design.md  2026-02-04-animate-example-selector-design.md  2026-02-04-duration-control-design.md  2026-02-04-duration-control.md  2026-02-04-gallery-thumbnail-optimization-design.md  2026-02-04-remove-library-section.md  2026-02-04-s2v-example-selector-design.md  2026-02-04-ti2v-example-selector.md  2026-02-12-rtxpro6000-optimization-design.md  2026-02-12-rtxpro6000-optimization.md
example/: pipeline.sh
pages/: animate_14b.py  examples.py  gallery.py  home.py  i2v_a14b.py  s2v_14b.py  t2v_a14b.py  ti2v_5b.py
patches/: generate.py
patches/wan/: image2video.py  text2video.py
patches/wan/configs/: shared_config.py  wan_animate_14B.py
tests/: test_common.py  test_history.py
utils/: common.py  config.py  examples.py  generation.py  gpu.py  history.py  metadata.py  model_cards.py  queue.py  sidebar.py  styling.py  theme.py  upload_components.py  validation.py
